/* Fixed Bugs on Safari */

--- a/src/App.css
+++ b/src/App.css
@@ -285,6 +285,9 @@
   .desktopIconContainer {
     display: none;
   }
+  .desktopIconContainerDark {
+    display: none;
+  }
 }
 
 @media (max-width: 900px) {
